# Projekt-Archimedes

./: .gitignore  CHANGELOG_CODE_REVIEW.md  README.md  archimedes_colab.ipynb  benchmark_system.py  dashboard.py  evaluate_elo.py  metrics.py  pyproject.toml  quantize_tpn.py  requirements.txt  requirements_colab.txt  run_archimedes.py  train_end_to_end.py  train_san.py  train_tpn.py
src/archimedes/: benchmark_utils.py  create_dataset.py  hardware_utils.py  model.py  pipeline.py  representation.py  rewards.py  search.py  utils.py
tests/: sample.pgn  test_create_dataset.py  test_model.py  test_pipeline.py  test_representation.py  test_rewards.py  test_search.py  test_utils.py
